ENH: Disable old tutorial tests
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16333 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -54,8 +54,8 @@ set(EMSEG_RUN_EXTRA_LONG_TESTS   OFF
   )
 mark_as_advanced(EMSEG_RUN_EXTRA_LONG_TESTS)
 
-set(EMSEG_RUN_REG_TESTS   ON
-  CACHE BOOL "Enable EMSegment extra, registration tests."
+set(EMSEG_RUN_REG_TESTS   OFF
+  CACHE BOOL "Enable EMSegment extra, registration tests." FORCE
   )
 mark_as_advanced(EMSEG_RUN_REG_TESTS)
 
