--- a/Modules/AtlasCreator/Cxx/CMakeLists.txt
+++ b/Modules/AtlasCreator/Cxx/CMakeLists.txt
@@ -28,6 +28,10 @@ endif(APPLE)
 # --------------------------------------------------------------------------
 # Include dirs
 
+subDirs(
+  CongealingCLI
+)
+
 include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
