ENH: Switch to CMTK trunk/core
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16353 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Extensions/CMTK4Slicer/CMakeLists.txt
+++ b/Extensions/CMTK4Slicer/CMakeLists.txt
@@ -78,7 +78,7 @@ include(ExternalProject)
 set(PROJECTNAME CMTK)
 ExternalProject_Add(${PROJECTNAME}
 #  SVN_REPOSITORY "https://www.nitrc.org/svn/cmtk/tags/Slicer3"
-  SVN_REPOSITORY "https://www.nitrc.org/svn/cmtk/trunk"
+  SVN_REPOSITORY "https://www.nitrc.org/svn/cmtk/trunk/core"
   SVN_USERNAME "slicerbot"
   SVN_PASSWORD "slicer"
   SVN_TRUST_CERT 1
