--- a/Extensions/CMTK4Slicer/CMakeLists.txt
+++ b/Extensions/CMTK4Slicer/CMakeLists.txt
@@ -77,11 +77,10 @@ include(ExternalProject)
 
 set(PROJECTNAME CMTK)
 ExternalProject_Add(${PROJECTNAME}
-#  SVN_REPOSITORY "https://www.nitrc.org/svn/cmtk/tags/Slicer3"
-  SVN_REPOSITORY "https://www.nitrc.org/svn/cmtk/trunk/core"
+#  SVN_REPOSITORY "http://www.nitrc.org/svn/cmtk/tags/Slicer3"
+  SVN_REPOSITORY "http://www.nitrc.org/svn/cmtk/trunk/core"
   SVN_USERNAME "slicerbot"
   SVN_PASSWORD "slicer"
-  SVN_TRUST_CERT 1
   CMAKE_ARGS
     ${LOCAL_CMAKE_BUILD_OPTIONS}
     -DCMAKE_INSTALL_PREFIX:PATH=${CMTK_INSTALL_DIR}
