COMP: remove subversion macro to avoid partial rebuild after svn update. + remove debug messages in vtkOpenIGTLinkIFGUI::Enter().
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16402 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/OpenIGTLinkIF/CMakeLists.txt
+++ b/Modules/OpenIGTLinkIF/CMakeLists.txt
@@ -36,14 +36,14 @@ endif (OpenIGTLink_PROTOCOL_VERSION EQUAL 2)
 
 # --------------------------------------------------------------------------
 # Module Revision Number (for development purpose)
-find_package(Subversion)
-if (Subversion_FOUND)
-  Subversion_WC_INFO(${CMAKE_HOME_DIRECTORY} OpenIGTLinkIF)
-  #set(OpenIGTLinkIF_REVISION "${OpenIGTLinkIF_WC_REVISION}")
-  ADD_DEFINITIONS(-DOpenIGTLinkIF_REVISION=${OpenIGTLinkIF_WC_REVISION})
-else (Subversion_FOUND)
-  ADD_DEFINITIONS(-DOpenIGTLinkIF_REVISION="Unknown")
-endif (Subversion_FOUND)
+#find_package(Subversion)
+#if (Subversion_FOUND)
+#  Subversion_WC_INFO(${CMAKE_HOME_DIRECTORY} OpenIGTLinkIF)
+#  #set(OpenIGTLinkIF_REVISION "${OpenIGTLinkIF_WC_REVISION}")
+#  ADD_DEFINITIONS(-DOpenIGTLinkIF_REVISION=${OpenIGTLinkIF_WC_REVISION})
+#else (Subversion_FOUND)
+#  ADD_DEFINITIONS(-DOpenIGTLinkIF_REVISION="Unknown")
+#endif (Subversion_FOUND)
 
 
 # --------------------------------------------------------------------------
