ENH: display slicer source code revision in the help frame.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16407 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ProstateNav/CMakeLists.txt
+++ b/Modules/ProstateNav/CMakeLists.txt
@@ -17,11 +17,11 @@ endif(NOT Slicer3_SOURCE_DIR)
 # --------------------------------------------------------------------------
 # Find Slicer3
 
-find_package(Subversion)
-if (Subversion_FOUND)
-  Subversion_WC_INFO(${CMAKE_HOME_DIRECTORY} ProstateNav)
-  set(ProstateNav_REVISION "${ProstateNav_WC_REVISION}")
-endif (Subversion_FOUND)
+#find_package(Subversion)
+#if (Subversion_FOUND)
+#  Subversion_WC_INFO(${CMAKE_HOME_DIRECTORY} ProstateNav)
+#  set(ProstateNav_REVISION "${ProstateNav_WC_REVISION}")
+#endif (Subversion_FOUND)
 
 # --------------------------------------------------------------------------
 # Include dirs
