--- a/Extensions/Congealing4Slicer/CMakeLists.txt
+++ b/Extensions/Congealing4Slicer/CMakeLists.txt
@@ -50,12 +50,14 @@ if (NOT WIN32)
   set( PROJECTNAME Congealing )
 
   ExternalProject_Add(${PROJECTNAME}
+#    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
     SVN_REPOSITORY "http://svn.github.com/domibel/Congealing"
     CMAKE_ARGS
     ${LOCAL_CMAKE_BUILD_OPTIONS}
     -DCMAKE_INSTALL_PREFIX:PATH=${MYPROJECT_INSTALL_DIR}
 #    -DCMAKE_BUILD_TYPE:STRING=Release
     -DCMAKE_BUILD_TYPE:STRING=Debug
+#   INSTALL_COMMAND ""
     )
 
 install(
@@ -67,14 +69,14 @@ install(
               WORLD_EXECUTE WORLD_READ
 )
 
-install(
-  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${PROJECTNAME}-prefix/src/${PROJECTNAME}-build/${PROJECTNAME}-install/lib/
-  DESTINATION ${Slicer3_INSTALL_PLUGINS_BIN_DIR}
-  FILES_MATCHING PATTERN "*"
-  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
-              GROUP_EXECUTE GROUP_READ
-              WORLD_EXECUTE WORLD_READ
-)
+#install(
+#  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${PROJECTNAME}-prefix/src/${PROJECTNAME}-build/${PROJECTNAME}-install/lib/
+#  DESTINATION ${Slicer3_INSTALL_PLUGINS_BIN_DIR}
+#  FILES_MATCHING PATTERN "*"
+#  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+#              GROUP_EXECUTE GROUP_READ
+#              WORLD_EXECUTE WORLD_READ
+#)
 
 endif(NOT WIN32)
 
