--- a/Extensions/Congealing4Slicer/CMakeLists.txt
+++ b/Extensions/Congealing4Slicer/CMakeLists.txt
@@ -65,12 +65,12 @@ install(
               WORLD_EXECUTE WORLD_READ
 )
 
-install(
-  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${PROJECTNAME}-prefix/src/${PROJECTNAME}-build/${PROJECTNAME}-install/lib/
-  DESTINATION ${Slicer3_INSTALL_PLUGINS_BIN_DIR}
-  FILES_MATCHING PATTERN "*"
-  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
-              GROUP_EXECUTE GROUP_READ
-              WORLD_EXECUTE WORLD_READ
-)
+#install(
+#  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${PROJECTNAME}-prefix/src/${PROJECTNAME}-build/${PROJECTNAME}-install/lib/
+#  DESTINATION ${Slicer3_INSTALL_PLUGINS_BIN_DIR}
+#  FILES_MATCHING PATTERN "*"
+#  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+#              GROUP_EXECUTE GROUP_READ
+#              WORLD_EXECUTE WORLD_READ
+#)
 
