ENH: my github version is working, now switch to debonet's github for latest improvements
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16413 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Extensions/Congealing4Slicer/CMakeLists.txt
+++ b/Extensions/Congealing4Slicer/CMakeLists.txt
@@ -47,7 +47,7 @@ message("######### LOCAL_CMAKE_BUILD_OPTIONS:            ${LOCAL_CMAKE_BUILD_OPT
 
 set(PROJECTNAME CongealingExternal)
 ExternalProject_Add(${PROJECTNAME}
-  SVN_REPOSITORY "http://svn.github.com/domibel/Congealing"
+  SVN_REPOSITORY "http://svn.github.com/debonet/Congealing"
   CMAKE_ARGS
     ${LOCAL_CMAKE_BUILD_OPTIONS}
     -DCMAKE_INSTALL_PREFIX:PATH=${PROJECTNAME}-install
