ENH: Extension compiles fine in Debug mode , switch now to Release mode
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16421 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Extensions/Congealing4Slicer/CMakeLists.txt
+++ b/Extensions/Congealing4Slicer/CMakeLists.txt
@@ -51,8 +51,8 @@ ExternalProject_Add(${PROJECTNAME}
   CMAKE_ARGS
     ${LOCAL_CMAKE_BUILD_OPTIONS}
     -DCMAKE_INSTALL_PREFIX:PATH=${PROJECTNAME}-install
-#    -DCMAKE_BUILD_TYPE:STRING=Release
-    -DCMAKE_BUILD_TYPE:STRING=Debug
+    -DCMAKE_BUILD_TYPE:STRING=Release
+#    -DCMAKE_BUILD_TYPE:STRING=Debug
 # INSTALL_COMMAND ""
 )
 
